--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@fastify/multipart": "^9.0.3",
+    "@fastify/static": "^8.2.0",
     "@prisma/client": "^6.11.1",
     "bcrypt": "^6.0.0",
     "fastify": "^5.4.0",
@@ -22,7 +24,8 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^24.0.12",
+    "@types/multiparty": "^4.2.1",
+    "@types/node": "^24.0.13",
     "prisma": "^6.11.1"
   }
 }
